Upgrades java to version 22 and spring to version 3.3